[package]
name = "ld"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["now", "serde"] }
fern = "0.7.1"
futures = "0.3.31"
log = "0.4.29"
reqwest = { version = "0.12.24", features = ["native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features=["native-tls"] }
tungstenite = "0.29.0"
twitch_api = { version = "0.7.2", features = ["eventsub"] }
url = "2.5.8"
